# tvtorrent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: CMakeLists.txt  build.rc  compile_commands.json  container.cpp  container.h  data_manager.cpp  data_manager.h  downloader.cpp  downloader.h  episode.h  feed.cpp  feed.h  feed_control_window.cpp  feed_control_window.h  formatter.h  hash.h  info.rc  item_window.cpp  item_window.h  logger.cpp  logger.h  macros.h  main.cpp  main_window.cpp  main_window.h  resource_manager.cpp  resource_manager.h  settings_manager.cpp  settings_manager.h  settings_window.cpp  settings_window.h  torrent_handler.cpp  torrent_handler.h  tv_item.h  tv_widget.cpp  tv_widget.h  updater.cpp  updater.h  windows_helper.h
src/res/: tvtorrent_addfeed.glade  tvtorrent_additem.glade  tvtorrent_additem.glade~  tvtorrent_addtorrent.glade  tvtorrent_addtorrent.glade~  tvtorrent_confirm.glade  tvtorrent_feedcontrol.glade  tvtorrent_headerbar.glade  tvtorrent_headerbar.glade~  tvtorrent_removefeed.glade  tvtorrent_removetorrent.glade  tvtorrent_removetorrent.glade~  tvtorrent_settings.glade  tvtorrent_torrentcontrols.glade  tvtorrent_torrentcontrols.glade~  tvtorrent_torrentfile.glade  tvtorrent_torrentfile.glade~  tvtorrent_treeview.glade  tvtorrent_treeview.glade~  tvtorrent_tvwidget.glade  tvtorrent_tvwidget.glade~  tvtorrent_updatedialog.glade
